[package]
name = "glass-derive"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"