[package]
name = "glass"
version = "0.4.1"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"

[features]
# Default set of features, includes full library.
default = ["redis", "serde_json", "rmp-serde"]
# Redis Feature
redis_backend = ["redis"]
# JSON Feature
json_backend = ["serde_json"]
# YAML Feature
yaml_backend = ["serde_yaml"]
# MsgPack Feature
msgpack_backend = ["rmp-serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4"

serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
rmp-serde = {version = "0.13", optional = true }
redis = { version = "0.10", optional = true }

[dependencies.glass-derive]
path = "../glass-derive"
